@@ -641,3 +641,4 @@ fi
 - generate index for hdrid (aka Sha1header) tag, query/verify by hdrid.
 - generate index for fileid (aka Filemd5s) tag, query/verify by fileid.
 - query/verify by install transaction id.
+- rpm-4.0.4 release candidate.
